@@ -1,0 +1,14 @@
+<html> 
+<body>
+<p>Tests bug <a href="https://bugs.webkit.org/show_bug.cgi?id=26200">26200</a> where the caret position jumps off to an incorrect position after auto-correcting a misspelled word.</p>
+<p>Open this file in Google Chromium (version 3.0 +), in Windows, and enable the --auto-spell-correct flag. Insert the word 'teh' between any two words in the paragraph below.</p>
+<p>SUCCESS:  After hitting space, 'teh' is auto-corrected to 'the', and the caret stays on in the place it is supposed to be in after typing the word and hitting space.</p>
+<textarea rows="6" cols="35">
+This is an english statement.
+This is an english statement.
+This is an english statement.
+This is an english statement.
+This is an english statement.
+</textarea>
+</body>
+<html>
